feat: Implement automated upstream sync and review process for Capacitor+
- Add GitHub Actions workflows for auto-merging upstream sync PRs and publishing releases.
- Create a sync-upstream workflow to fetch and merge changes from the official Capacitor repository.
- Introduce Claude Code for comprehensive security reviews of upstream sync PRs.
- Update CI workflow to trigger on both main and plus branches.
- Modify package.json files across all packages to reflect the new @capacitor-plus scope.
- Enhance README with detailed information about Capacitor+ and its automated processes.
- Implement a script to sync peer dependencies with the new package structure.

--- a/core/package.json
+++ b/core/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@capacitor/core",
+  "name": "@capacitor-plus/core",
   "version": "8.0.0-beta.0",
-  "description": "Capacitor: Cross-platform apps with JavaScript and the web",
-  "homepage": "https://capacitorjs.com",
-  "author": "Ionic Team <hi@ionic.io> (https://ionic.io)",
+  "description": "Capacitor+: Enhanced Capacitor with automated upstream sync - Cross-platform apps with JavaScript and the web",
+  "homepage": "https://github.com/Cap-go/capacitor-plus",
+  "author": "Capgo Team <support@capgo.app> (https://capgo.app)",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ionic-team/capacitor.git"
+    "url": "git+https://github.com/Cap-go/capacitor-plus.git"
   },
   "bugs": {
-    "url": "https://github.com/ionic-team/capacitor/issues"
+    "url": "https://github.com/Cap-go/capacitor-plus/issues"
   },
   "files": [
     "dist/",
