--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
       "hoist": true
     },
     "version": {
-      "allowBranch": "main",
+      "allowBranch": ["main", "plus"],
       "conventionalCommits": true,
       "createRelease": "github",
       "message": "Release %s",
