--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -19,6 +19,11 @@ on:
         description: 'Specific PR number (only for specific_pr mode)'
         required: false
         type: string
+      force_fmt:
+        description: 'Force run formatter on all existing sync branches'
+        required: false
+        default: false
+        type: boolean
 
 env:
   UPSTREAM_REPO: ionic-team/capacitor
@@ -128,11 +133,18 @@ jobs:
                 # We need to check if the upstream PR has new commits
                 OUR_BRANCH_HEAD=$(git rev-parse "origin/$SYNC_BRANCH")
 
+                # Check if force_fmt is enabled
+                FORCE_FMT="${{ github.event.inputs.force_fmt }}"
+
                 # Check if upstream commit is already in our branch
                 if git merge-base --is-ancestor "$UPSTREAM_HEAD" "origin/$SYNC_BRANCH" 2>/dev/null; then
-                  echo "Our sync branch is up to date with upstream PR, skipping..."
-                  git branch -D upstream-pr-$PR_NUMBER 2>/dev/null || true
-                  continue
+                  if [ "$FORCE_FMT" = "true" ]; then
+                    echo "Force fmt enabled - will re-format even though branch is up to date..."
+                  else
+                    echo "Our sync branch is up to date with upstream PR, skipping..."
+                    git branch -D upstream-pr-$PR_NUMBER 2>/dev/null || true
+                    continue
+                  fi
                 else
                   echo "Upstream PR has new commits! Updating our sync branch..."
                   # Continue to re-sync the branch
